kubernetes/legacy/apps/syncthing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "syncthing.k8s.local"
  rules:
    - backendRefs:
        - name: syncthing
          port: 8384
